--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "license": "proprietary",
     "authors": [
         {
-            "name": "ONGR team",
-            "homepage": "http://www.nfq.com"
+            "name": "ONGR",
+            "homepage": "http://www.ongr.io"
         }
     ],
     "require": {
