--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,13 @@
         "php": ">=5.3"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "~1"
+        "squizlabs/php_codesniffer": "~1",
+        "phpunit/phpunit": "~4.2"
     },
-    "target-dir": "ONGR"
+    "target-dir": "ONGR",
+    "autoload": {
+        "psr-4": {
+            "ONGR\\": ""
+        }
+    }
 }
