--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit>
+<phpunit
+        backupGlobals="false"
+        backupStaticAttributes="false"
+        colors="true"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="true"
+        convertWarningsToExceptions="true"
+        processIsolation="false"
+        stopOnFailure="false"
+        syntaxCheck="false"
+        bootstrap="vendor/autoload.php">
+
     <testsuites>
         <testsuite name="ONGR Test Suite">
             <directory>Tests/AllTests.php</directory>
@@ -18,6 +29,6 @@
 
     <logging>
         <log type="coverage-text" target="php://stdout" showOnlySummary="true"/>
-        <!--<log type="coverage-html" target="Tests/app/build/coverage" title="Coverage" charset="UTF-8" yui="true" highlight="true"/>-->
+        <!--<log type="coverage-html" target="Tests/Build/Coverage" title="Coverage" charset="UTF-8" yui="true" highlight="true"/>-->
     </logging>
 </phpunit>
