--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3"
+        "php": "~5.4"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "~1",
+        "squizlabs/php_codesniffer": "1.*",
         "phpunit/phpunit": "~4.2"
     },
     "target-dir": "ONGR",
