--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "squizlabs/php_codesniffer": "~2.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "~2.0",
         "phpunit/phpunit": "~4.2"
     },
     "target-dir": "Ongr",
