--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
     "require-dev": {
         "phpunit/phpunit": "~4.2"
     },
-    "target-dir": "Ongr",
     "autoload": {
-        "psr-0": {"Ongr\\": ""}
+        "psr-0": {"": "./"}
     }
 }
