--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,7 @@
 
     <testsuites>
         <testsuite name="ONGR Test Suite">
-            <directory>Tests/AllTests.php</directory>
+            <directory>Ongr/Tests/AllTests.php</directory>
         </testsuite>
     </testsuites>
 
@@ -21,14 +21,15 @@
         <whitelist>
             <directory>./</directory>
             <exclude>
-                <directory>./Tests</directory>
+                <directory>./Ongr/Tests</directory>
                 <directory>./vendor</directory>
             </exclude>
         </whitelist>
     </filter>
 
+    <!--Add logging if you need via cli argument-->
     <logging>
-        <log type="coverage-text" target="php://stdout" showOnlySummary="true"/>
+        <!--<log type="coverage-text" target="php://stdout" showOnlySummary="true"/>-->
         <!--<log type="coverage-html" target="Tests/Build/Coverage" title="Coverage" charset="UTF-8" yui="true" highlight="true"/>-->
     </logging>
 </phpunit>
