--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,16 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: hhvm
+    - php: 7.0
+
 before_script:
-  - $TRAVIS_BUILD_DIR/travis.sh
-  - cd $TRAVIS_BUILD_DIR/../Ongr/
-  - composer self-update
-  - composer update --prefer-source
+  - composer install
+
 script:
-  - vendor/bin/phpunit Tests/AllTests.php
+  - vendor/bin/phpunit
