--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: php
 php:
   - 5.4
@@ -16,3 +17,7 @@ before_script:
 
 script:
   - vendor/bin/phpunit
+cache:
+  directories:
+    - vendor/
+    - $HOME/.composer/cache
